2012-02-23  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/redc_1.asm: Make it work for DOS64 (broken in last edit).

2012-02-20 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/toom_interpolate_8pts.c: Compute carry iif non-trivial.

	* mpz/gcdext.c: Adapt to relaxed mpn_gcdext's input requirements.

	* mpz/and.c: Use mpn_ logic everywhere. Reduce branches.
	* mpz/ior.c: Likewise.
	* mpz/xor.c: Likewise.

2012-02-20  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/coreisbr/mul_1.asm: New file.

	* mpn/x86_64/coreisbr/aorsmul_1.asm: New file.

	* mpn/x86_64/mod_34lsub1.asm: Avoid ",pt" branch hint since many
	assemblers don't support it.

2012-02-19  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/redc_1.c: Put back mpn_add_n call, return its carry.
	Reintroduce previously removed RP argument.
	* mpn/x86_64/redc_1.asm: Likewise.

	* mpn/generic/redc_2.c:  Remove mpn_sub_n call, return carry from
	mpn_add_n call.

	* gmp-impl.h (mpn_redc_1, mpn_redc_2): Now return an mp_limb_t.

	* tune/speed.h (SPEED_ROUTINE_REDC_1): Adopt to pass RP argument.

	* tests/refmpn.c (refmpn_redc_1): Adopt to new redc_1 interface.

	* mpn/generic/powm.c (MPN_REDC_1): Pass rp parameter to mpn_redc_1.
	* mpn/generic/powm_sec.c (MPN_REDC_1_SEC): Likewise.
	* mpn/generic/powm.c (MPN_REDC_2): New macro, use for mpn_redc_2.

>>>>>>> other
2012-02-18  Marc Glisse  <marc.glisse@inria.fr>

	* gmpxx.h (std::common_type): New partial specialization in C++11.
	* tests/cxx/t-cxx11.cc: Test it.

	* gmpxx.h: Don't declare long double functions that are never defined.

	* gmpxx.h (__gmp_binary_expr): Let things happen in place: q=q*q+z*z
	becomes tmp=z*z, q=q*q, q+=tmp.
	* tests/cxx/t-binary.cc: More variable reuse tests.

2012-02-17  Marc Glisse  <marc.glisse@inria.fr>

	* gmp-h.in (__GMP_WITHIN_GMP): Test with #ifdef instead of #if, for
	the benefit of applications using gcc -Wundef.
	(__GMP_WITHIN_GMPXX): Likewise.

2012-02-16  Marc Glisse  <marc.glisse@inria.fr>
